新增默认安全管理器实现